--- a/geekshop/mainapp/templates/mainapp/base.html
+++ b/geekshop/mainapp/templates/mainapp/base.html
@@ -41,7 +41,7 @@
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="auth/profile.html">User
+                    <a class="nav-link" href="{% url 'authapp:profile' %}">{{ user.username }}
                         <i class="fas fa-user-circle"></i>
                     </a>
                 </li>
